# codingbat

./: CHANGELOG.md  LICENSE  README.md  codingbat.cabal
app/: Main.hs
src/: List1.hs  List2.hs  Logic1.hs  Logic2.hs  String1.hs  String2.hs  Warmup1.hs  Warmup2.hs
test/: List1Spec.hs  List2Spec.hs  Logic1Spec.hs  Logic2Spec.hs  Spec.hs  String1Spec.hs  String2Spec.hs  Warmup1Spec.hs  Warmup2Spec.hs
