cabal-version:      3.0
name:               codingbat
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Justin Kian Romeon
maintainer:         romeonjustin@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Warmup1
        Warmup2
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable codingbat
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        codingbat

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite codingbat-test
    import:           warnings
    default-language: Haskell2010
    other-modules:
        Warmup1Spec
        Warmup2Spec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.17.2.1,
        codingbat,
        hspec
