cabal-version: 3.0
name: codingbat
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Justin Kian Romeon
maintainer: romeonjustin@gmail.com

library
    exposed-modules:
        Warmup1
        Warmup2
        String1
        Logic1
    build-depends:
        base ^>=4.17.2.1,
        containers
    hs-source-dirs: src
    default-language: Haskell2010

test-suite codingbat-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Warmup1Spec
        Warmup2Spec
        String1Spec
        Logic1Spec
    build-depends:
        base ^>=4.17.2.1,
        codingbat,
        hspec
    hs-source-dirs: test
    default-language: Haskell2010