cabal-version: 3.0
name: codingbat
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Justin Kian Romeon
maintainer: romeonjustin@gmail.com

library
    exposed-modules:
        Warmup1
        Warmup2
        String1
        String2
        Logic1
        Logic2
        List1
    build-depends:
        base ^>=4.18.3.0,
        containers
    hs-source-dirs: src
    default-language: Haskell2010

test-suite codingbat-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Warmup1Spec
        Warmup2Spec
        String1Spec
        String2Spec
        Logic1Spec
        Logic2Spec
        List1Spec
    build-depends:
        base ^>=4.18.3.0,
        codingbat,
        hspec
    hs-source-dirs: test
    default-language: Haskell2010